# genz-speak-sft

./: .env.example  .gitignore  README.md  evaluation.ipynb  generate_data.py  genz_dataset.jsonl  pyproject.toml  train.ipynb
